RESOLVED FIXED92615
'highlight' should not be parsed for a composite operation
https://bugs.webkit.org/show_bug.cgi?id=92615
Summary 'highlight' should not be parsed for a composite operation
dstockwell
Reported 2012-07-30 00:52:47 PDT
'highlight' should not be parsed for a composite operation
Attachments
Patch (3.82 KB, patch)
2012-07-30 01:04 PDT, dstockwell
no flags
dstockwell
Comment 1 2012-07-30 01:04:51 PDT
WebKit Review Bot
Comment 2 2012-08-08 00:13:54 PDT
Comment on attachment 155227 [details] Patch Clearing flags on attachment: 155227 Committed r125003: <http://trac.webkit.org/changeset/125003>
WebKit Review Bot
Comment 3 2012-08-08 00:13:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.