'highlight' should not be parsed for a composite operation https://bugs.webkit.org/show_bug.cgi?id=92615

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2012-08-08
Reviewed by Ryosuke Niwa.

Source/WebCore:

r88144 removed support for highlight as a composite operation but did
not update the parser.

Test: fast/backgrounds/composite-highlight-is-invalid.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFillProperty):

LayoutTests:

* fast/backgrounds/composite-highlight-is-invalid-expected.txt: Added.
* fast/backgrounds/composite-highlight-is-invalid.html: Added.

Canonical link: https://commits.webkit.org/111311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125003 268f45cc-cd09-0410-ab3c-d52691b4dbfc